- AEM: Improved logs